cleanup fdemode.py

--- a/testing/coupled_waveg_test.ipynb
+++ b/testing/coupled_waveg_test.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-21T00:59:48.528593Z",
-     "start_time": "2020-06-21T00:59:41.837834Z"
+     "end_time": "2020-06-21T23:10:43.027315Z",
+     "start_time": "2020-06-21T23:10:34.763895Z"
     }
    },
    "outputs": [],
@@ -38,8 +38,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-21T00:59:48.535555Z",
-     "start_time": "2020-06-21T00:59:48.530558Z"
+     "end_time": "2020-06-21T23:10:43.033271Z",
+     "start_time": "2020-06-21T23:10:43.029282Z"
     }
    },
    "outputs": [],
@@ -49,30 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-21T00:59:48.702624Z",
-     "start_time": "2020-06-21T00:59:48.537541Z"
+     "end_time": "2020-06-21T22:44:43.049597Z",
+     "start_time": "2020-06-21T22:44:42.725999Z"
     }
    },
    "outputs": [],
    "source": [
-    "environ.create_structures()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-21T00:59:48.753491Z",
-     "start_time": "2020-06-21T00:59:48.705617Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "environ._add_to_core_group(name=\"structure\")"
+    "environ.set_geometry(λ, wg, name=\"structure\", subs_thickness=3e-6, cap_thickness=0.5e-6, x_core=0, left=True, right=True)"
    ]
   },
   {
@@ -80,27 +66,13 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-21T00:59:48.812333Z",
-     "start_time": "2020-06-21T00:59:48.756486Z"
+     "end_time": "2020-06-21T23:11:04.147072Z",
+     "start_time": "2020-06-21T23:11:03.316034Z"
     }
    },
    "outputs": [],
    "source": [
-    "environ.set_group_material(\"structure\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-21T00:59:49.082623Z",
-     "start_time": "2020-06-21T00:59:48.817320Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "environ.set_geometry(λ, wg, name=\"structure\", subs_thickness=3e-6, cap_thickness=0.5e-6, x_core=0, left=True, right=True)"
+    "environ.produce_environment(wg, λ, left=False)"
    ]
   },
   {
