cleanup coupled_wg

--- a/testing/coupled_waveg_test.ipynb
+++ b/testing/coupled_waveg_test.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-21T23:10:43.027315Z",
-     "start_time": "2020-06-21T23:10:34.763895Z"
+     "end_time": "2020-06-21T23:15:05.938860Z",
+     "start_time": "2020-06-21T23:14:57.724628Z"
     }
    },
    "outputs": [],
@@ -38,8 +38,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-21T23:10:43.033271Z",
-     "start_time": "2020-06-21T23:10:43.029282Z"
+     "end_time": "2020-06-21T23:15:05.947828Z",
+     "start_time": "2020-06-21T23:15:05.941844Z"
     }
    },
    "outputs": [],
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "environ.set_geometry(λ, wg, name=\"structure\", subs_thickness=3e-6, cap_thickness=0.5e-6, x_core=0, left=True, right=True)"
+    "# environ.set_geometry(λ, wg, name=\"structure\", subs_thickness=3e-6, cap_thickness=0.5e-6, x_core=0, left=True, right=True)"
    ]
   },
   {
@@ -77,13 +77,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-21T23:15:17.014341Z",
+     "start_time": "2020-06-21T23:15:15.779305Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fde = fde.FDEModeSimulator(environ)\n",
-    "fde.setup_sim(1.2e-6)"
+    "fde.setup_sim(λ)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-21T23:17:39.037911Z",
+     "start_time": "2020-06-21T23:17:38.383615Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "modes = fde.solve_mode(λ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
