--- a/testing/coupled_waveg_test.ipynb
+++ b/testing/coupled_waveg_test.ipynb
@@ -35,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-21T23:15:05.947828Z",
-     "start_time": "2020-06-21T23:15:05.941844Z"
+     "end_time": "2020-06-22T00:17:05.573127Z",
+     "start_time": "2020-06-22T00:17:05.569140Z"
     }
    },
    "outputs": [],
@@ -102,6 +102,127 @@
    "outputs": [],
    "source": [
     "modes = fde.solve_mode(λ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks like it works, now let us test `coupled_wg.py`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-22T00:25:18.021342Z",
+     "start_time": "2020-06-22T00:25:17.445882Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dheydari\\Documents\\OneDrive - Stanford\\research\\modules\\pylum\\structure\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pylum\n",
+    "import pylum.structure.waveguide as wg\n",
+    "import pylum.fdemode as fde\n",
+    "import pylum.structure.ridge_wg as ridge\n",
+    "import pylum.structure.coupled_wg as coupled_wg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-22T00:25:18.756376Z",
+     "start_time": "2020-06-22T00:25:18.749425Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gap = 500e-9\n",
+    "gap_etch = 1e-6\n",
+    "etch_l = 1.2e-6\n",
+    "etch_r = 2.4e-6\n",
+    "height = 3e-6\n",
+    "width_l = 3e-6\n",
+    "width_r = 2e-6\n",
+    "wg = coupled_wg.CoupledWaveguide(gap, gap_etch, width_l, width_r, height, etch_l, etch_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-22T00:25:20.713164Z",
+     "start_time": "2020-06-22T00:25:20.708157Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "λ = 1.2e-6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-22T00:25:30.675495Z",
+     "start_time": "2020-06-22T00:25:30.670501Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pylum.structure.coupled_wg.CoupledWaveguide at 0x288ded8a668>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-22T00:25:46.916078Z",
+     "start_time": "2020-06-22T00:25:31.228010Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "coupled_environ = coupled_wg.CoupledRidgeWaveguideEnvironment(wg, hideGUI=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-22T00:26:08.584532Z",
+     "start_time": "2020-06-22T00:26:06.909548Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "coupled_environ.create_coupled_guides(λ, subs_thickness=3e-6, cap_thickness=0.5e-6)"
    ]
   },
   {
